force-app/main/default/objects/FA_KD__c/FA_KD__c.object-meta.xml
<CustomObject>
    <label>FA KD</label>
    <nameField>
        <label>FA KD</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FA KD</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>