force-app/main/default/objects/FA_KD__c/fields/CertificationID__c.field-meta.xml
<CustomField>
    <fullName>CertificationID__c</fullName>
    <label>CertificationID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>