force-app/main/default/objects/FA_KD__c/fields/ESZC__c.field-meta.xml
<CustomField>
    <fullName>ESZC__c</fullName>
    <label>ESZC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>