force-app/main/default/objects/FA_KD__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CertificationID__c</columns>
    <columns>ESZC__c</columns>
    <columns>Kd__c</columns>
    <columns>MCELEM__c</columns>
    <columns>PTC__c</columns>
    <columns>SZC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>